Hide overflow because I don't feel like fixing the css of an individual component that's overflowing on the x axis

--- a/app/globals.css
+++ b/app/globals.css
@@ -237,3 +237,6 @@ body {
 .btn-ghost:hover::before {
   transform: translateY(0);
 }
+body,html {
+  overflow-x: hidden;
+}
